# canister-upgrader

./: .gitignore  Cargo.toml  README.md  dfx.json
.github/workflows/: build_and_tests.yml
scripts/: build.sh
src/did/: Cargo.toml
src/did/src/: codec.rs  error.rs  lib.rs
src/upgrader_canister/: Cargo.toml
src/upgrader_canister/src/: build_data.rs  canister.rs  constant.rs  inspect_message.rs  lib.rs  main.rs  state.rs
src/upgrader_canister/src/state/: mod.rs  permission.rs  polls.rs  projects.rs  settings.rs
src/upgrader_canister/tests/: upgrader_canister_it.rs
src/upgrader_canister/tests/canister/: mod.rs
src/upgrader_canister/tests/pocket_ic/: mod.rs  wasm_utils.rs
src/upgrader_canister_client/: Cargo.toml
src/upgrader_canister_client/src/: lib.rs
