[package]
name = "upgrader_canister"
version.workspace = true
edition.workspace = true

[dependencies]
candid = { workspace = true }
ic-canister = { workspace = true }
ic-exports = { workspace = true }
ic-helpers = { workspace = true }
ic-log = { workspace = true }
ic-canister-client = { workspace = true }
ic-storage = { workspace = true }
ic-stable-structures = { workspace = true }
upgrader_canister_did = { workspace = true }

[dev-dependencies]
upgrader_canister_client = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
vergen-gitcl = { workspace = true }
